<resources>
    <string name="app_name">Calculator2</string>
    <string name="_0">0</string>
    <string name="back2"><![CDATA[<<]]></string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">,</string>
    <string name="delete">/</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_00">00</string>
    <string name="dot2">.</string>
</resources>