<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="60sp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="65sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/main2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="60sp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_7"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_4"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/zero"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/percent"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_8"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_5"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/zero2"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_00"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/back2"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_9"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_6"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/dot2"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/multi"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/minus1"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/minus"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/plus1"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/plus"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/equal"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:text="@string/equal"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>